force-app/main/default/objects/Connection_Type__c/fields/Router_Name__c.field-meta.xml
<CustomField>
    <fullName>Router_Name__c</fullName>
    <label>Router Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>