force-app/main/default/objects/Connection_Type__c/fields/Router_Owned__c.field-meta.xml
<CustomField>
    <fullName>Router_Owned__c</fullName>
    <label>Router Owned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>