force-app/main/default/objects/Connection_Type__c/fields/SD_Ethernet__c.field-meta.xml
<CustomField>
    <fullName>SD_Ethernet__c</fullName>
    <label>SD Ethernet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>