force-app/main/default/objects/Connection_Type__c/fields/SD_T1_CKT__c.field-meta.xml
<CustomField>
    <fullName>SD_T1_CKT__c</fullName>
    <label>SD T1 CKT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>