force-app/main/default/objects/Connection_Type__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Analytics Manager - Premium</fullName>
            </value>
            <value>
                <fullName>Automated Arrival &amp; Departure</fullName>
            </value>
            <value>
                <fullName>Content Delivery Service</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>CSA Safety Perf</fullName>
            </value>
            <value>
                <fullName>Driver HOS Manager</fullName>
            </value>
            <value>
                <fullName>Driver Notification Services</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>In-cab Scanning</fullName>
            </value>
            <value>
                <fullName>Interactive Qualcomm</fullName>
            </value>
            <value>
                <fullName>MCP Enhanced Positions</fullName>
            </value>
            <value>
                <fullName>MMS-Media Manager</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>QTRACS</fullName>
            </value>
            <value>
                <fullName>SensorTRACS</fullName>
            </value>
            <value>
                <fullName>Services Portal Integration</fullName>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS</fullName>
            </value>
            <value>
                <fullName>Trip Manager</fullName>
            </value>
            <value>
                <fullName>Vehicle Command &amp; Control</fullName>
            </value>
            <value>
                <fullName>Vehicle Data Configurator</fullName>
            </value>
            <value>
                <fullName>Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Workflow Management Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>