force-app/main/default/objects/Connection_Type__c/fields/Shared_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret_Key__c</fullName>
    <label>Shared Secret Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>