force-app/main/default/objects/Connection_Type__c/fields/Siebel_Connection_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Siebel_Connection_Type_ID__c</fullName>
    <label>Siebel Connection Type ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>