force-app/main/default/objects/Connection_Type__c/fields/STRACS__c.field-meta.xml
<CustomField>
    <fullName>STRACS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STRACS</label>
    <type>Checkbox</type>
</CustomField>