force-app/main/default/objects/Connection_Type__c/fields/T2__c.field-meta.xml
<CustomField>
    <fullName>T2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T2</label>
    <type>Checkbox</type>
</CustomField>