force-app/main/default/objects/Connection_Type__c/fields/TruckMail__c.field-meta.xml
<CustomField>
    <fullName>TruckMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TruckMail</label>
    <type>Checkbox</type>
</CustomField>