force-app/main/default/objects/Connection_Type__c/fields/User_ID_Login_Aux_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID_Login_Aux_ID__c</fullName>
    <label>User ID/Login/Aux ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>