force-app/main/default/objects/Connection_Type__c/fields/VPN_Hardware_Model__c.field-meta.xml
<CustomField>
    <fullName>VPN_Hardware_Model__c</fullName>
    <label>VPN Hardware Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>