force-app/main/default/objects/Connection_Type__c/fields/VPN_Hardware_Vendor__c.field-meta.xml
<CustomField>
    <fullName>VPN_Hardware_Vendor__c</fullName>
    <label>VPN Hardware Vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>