force-app/main/default/objects/Connection_Type__c/recordTypes/BillBackDialIn.recordType-meta.xml
<RecordType>
    <fullName>BillBackDialIn</fullName>
    <active>true</active>
    <description>Create a new Bill Back Dial In Connection Type</description>
    <label>Bill Back Dial In</label>
</RecordType>