force-app/main/default/objects/Connection_Type__c/recordTypes/Dialin800.recordType-meta.xml
<RecordType>
    <fullName>Dialin800</fullName>
    <active>true</active>
    <description>Create a new Dial in 800 Connection Type</description>
    <label>Dial in 800</label>
</RecordType>