force-app/main/default/objects/Connection_Type__c/recordTypes/DialinLocal.recordType-meta.xml
<RecordType>
    <fullName>DialinLocal</fullName>
    <active>true</active>
    <description>Create a new Dial in Local Connection Type</description>
    <label>Dial in Local</label>
</RecordType>