force-app/main/default/objects/Connection_Type__c/recordTypes/FrameRelay.recordType-meta.xml
<RecordType>
    <fullName>FrameRelay</fullName>
    <active>true</active>
    <description>Create a new Frame Relay Connection Type</description>
    <label>Frame Relay</label>
</RecordType>