force-app/main/default/objects/Connection_Type__c/recordTypes/MPLS.recordType-meta.xml
<RecordType>
    <fullName>MPLS</fullName>
    <active>true</active>
    <description>Create a new MultiProtocol Label Switching Connection Type</description>
    <label>MPLS - MultiProtocol Label Switching</label>
</RecordType>