force-app/main/default/objects/Connection_Type__c/recordTypes/PPTP.recordType-meta.xml
<RecordType>
    <fullName>PPTP</fullName>
    <active>true</active>
    <description>Create a new PPTP Connection Type</description>
    <label>PPTP</label>
</RecordType>