force-app/main/default/objects/Connection_Type__c/recordTypes/ServicePortal.recordType-meta.xml
<RecordType>
    <fullName>ServicePortal</fullName>
    <active>true</active>
    <description>Create a new Service Portal Connection Type</description>
    <label>Service Portal</label>
</RecordType>