force-app/main/default/objects/Connection_Type__c/recordTypes/SharedFrameRelay.recordType-meta.xml
<RecordType>
    <fullName>SharedFrameRelay</fullName>
    <active>true</active>
    <description>Create a new Shared Frame Relay Connection Type</description>
    <label>Shared Frame Relay</label>
</RecordType>