force-app/main/default/objects/Connection_Type__c/recordTypes/VPN.recordType-meta.xml
<RecordType>
    <fullName>VPN</fullName>
    <active>true</active>
    <description>Create a new VPN Connection Type</description>
    <label>VPN</label>
</RecordType>