force-app/main/default/objects/Connection_Type__c/recordTypes/WebProduct.recordType-meta.xml
<RecordType>
    <fullName>WebProduct</fullName>
    <active>true</active>
    <description>Create a new Web Product Connection Type</description>
    <label>Web Product</label>
</RecordType>