force-app/main/default/objects/Connection_Type__c/recordTypes/x3rdParty.recordType-meta.xml
<RecordType>
    <fullName>x3rdParty</fullName>
    <active>true</active>
    <description>Create a new 3rd Party Connection Type</description>
    <label>3rd Party</label>
</RecordType>