force-app/main/default/objects/Connection_Type__c/validationRules/Fleet_ID_Req_for_Navigation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fleet_ID_Req_for_Navigation</fullName>
    <active>true</active>
    <description>When Navigation is selected as a Connection Type for Web Products, make Fleet ID required.</description>
    <errorConditionFormula>AND (
ISPICKVAL( Connection_Type__c ,&quot;Navigation&quot;),
Fleet_ID__c =&quot;&quot;,
$RecordType.Name = &quot;Web Product&quot;
)</errorConditionFormula>
    <errorDisplayField>Fleet_ID__c</errorDisplayField>
    <errorMessage>Fleet ID is required when Navigation is selected as the Connection Type.</errorMessage>
</ValidationRule>