force-app/main/default/objects/Connection_Type__c/validationRules/Password_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Password_Required</fullName>
    <active>true</active>
    <description>Password is required for all Web Product connection types except VCC</description>
    <errorConditionFormula>AND (
NOT(ISPICKVAL( Connection_Type__c ,&quot;VCC&quot;)),
 Password__c  = &quot;&quot;,
$RecordType.Name = &quot;Web Product&quot;, NOT(CONTAINS($Profile.Name, &quot;Interface&quot;))

)</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>Password is required</errorMessage>
</ValidationRule>