force-app/main/default/objects/Connection_Type__c/validationRules/Portal_Login_Req_for_Navigation.validationRule-meta.xml
<ValidationRule>
    <fullName>Portal_Login_Req_for_Navigation</fullName>
    <active>true</active>
    <description>When Navigation is selected as a Connection Type for Web Products, make Portal Login required.</description>
    <errorConditionFormula>AND (
ISPICKVAL( Connection_Type__c ,&quot;Navigation&quot;), 
Portal_Login__c  =&quot;&quot;,
$RecordType.Name = &quot;Web Product&quot;
)</errorConditionFormula>
    <errorDisplayField>Portal_Login__c</errorDisplayField>
    <errorMessage>Portal Login is required when Navigation is selected as the Connection Type.</errorMessage>
</ValidationRule>