force-app/main/default/objects/Connection_Type__c/validationRules/Shared_Secret_Key_Req_for_Navigation.validationRule-meta.xml
<ValidationRule>
    <fullName>Shared_Secret_Key_Req_for_Navigation</fullName>
    <active>true</active>
    <description>When Navigation is selected as a Connection Type for Web Products, make Shared Secret Key required.</description>
    <errorConditionFormula>AND (
ISPICKVAL( Connection_Type__c ,&quot;Navigation&quot;),  
Shared_Secret_Key__c   =&quot;&quot;,
$RecordType.Name = &quot;Web Product&quot;
)</errorConditionFormula>
    <errorDisplayField>Shared_Secret_Key__c</errorDisplayField>
    <errorMessage>Shared Secret Key is required when Navigation is selected as the Connection Type.</errorMessage>
</ValidationRule>