force-app/main/default/objects/Connection_Type__c/listViews/AllConnectionTypes.listView-meta.xml
<ListView>
    <fullName>AllConnectionTypes</fullName>
    <columns>NMC_Account__c</columns>
    <columns>Connection_Type__c</columns>
    <columns>NAME</columns>
    <columns>User_ID_Login_Aux_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NMC_Account_Other__c</columns>
    <columns>Cust_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NMC_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Connection Types</label>
    <language>en_US</language>
</ListView>