force-app/main/default/objects/Connection_Type__c/listViews/Dialin800ConnectionTypes.listView-meta.xml
<ListView>
    <fullName>Dialin800ConnectionTypes</fullName>
    <columns>NMC_Account__c</columns>
    <columns>Connection_Type__c</columns>
    <columns>NAME</columns>
    <columns>User_ID_Login_Aux_ID__c</columns>
    <columns>Password__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Connection_Type__c</field>
        <operation>equals</operation>
        <value>Dial In 800</value>
    </filters>
    <label>Dial in 800 Connection Types</label>
</ListView>